# processor

./: .gitignore  main.py  pyproject.toml  test.py
src/: __init__.py  db.py
src/tasks/: __init__.py  certification.py  schema.py
tests/: preset.py  test_certificate_generation.js  tests_certificate_generation.py  tests_duplicate.py
tests/integrated_tests/: tests_certificate_generation.py
tests/unit_tests/: test_certificate_generation.py
